Добавлена сортировка для пользовательских  по времени мероприятия
